@@ -38,6 +38,9 @@
 <p>2019-06-02  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>magick/nt_base.c: Search for n019003l.pfb (the &quot;Helvetica&quot;-like
+font) rather than fonts.dir since fonts.dir is not present in all
+URW font collections.</li>
 <li>NEWS.txt: Update news.</li>
 </ul>
 </blockquote>
